Fix PageSwitcher clipping out of view
- Change color of PageSwitcher icon to be same as other reds

--- a/src/components/css/PageSwitcher.css
+++ b/src/components/css/PageSwitcher.css
@@ -8,7 +8,7 @@
 }
 
 .switcher-icon {
-    color: red;
+    color: #dc3545;
     cursor: pointer;
     pointer-events: all !important;
 }
